# knightsrook-communicable-disease-forecaster

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  ruff.toml
backend/app/: config.py  dashboard_stream.py  db.py  events.py  logging.py  main.py
backend/app/api/: health.py  ingest.py  layers.py  predictions.py
backend/app/ingest/: gpei.py
backend/app/middleware/: auth.py
backend/app/subsystems/: cross_border.py  fly_kernel.py  hydrogeology.py  idm_baseline.py  surveillance.py  transhumance.py
dashboard/: index.html  nginx.conf  package.json  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/lib/: api.ts  ws.ts
db/: Dockerfile
db/init/: 01-extensions.sql  02-schema.sql  03-ingest-tables.sql
docs/architecture/: overview.md
